// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Shipping Details component should renders correctly with BOSS/BOPIS order 1`] = `
<Fragment>
  <Styled(View)
    spacingStyles="margin-top-MED"
  >
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontFamily="primary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      spacingStyles="margin-top-XS margin-bottom-XS"
      text="lbl_orderDetails_pickup"
      textDecoration={null}
    />
    <Address
      className="elem-mb-SM elem-mt-XXS"
      customStyle={Object {}}
      dataLocatorPrefix="address"
      fontSize="fs14"
      regularName={true}
      showCountry={false}
      showDefaultText={false}
      showName={true}
      showPhone={false}
    />
  </Styled(View)>
  <PickUpSummary
    ordersLabels={Object {}}
    pickUpStore={
      Object {
        "address": Object {
          "addressLine1": "234 E 149th St",
          "city": "Bronx",
          "state": "NY",
          "zipCode": "10451",
        },
        "basicInfo": Object {
          "storeName": "28152 LA drive",
        },
      }
    }
  />
</Fragment>
`;

exports[`Order Shipping Details component should renders correctly with ECOM order 1`] = `
<Fragment>
  <Styled(View)
    spacingStyles="margin-top-MED"
  >
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontFamily="primary"
      fontSize="fs14"
      fontWeight="semibold"
      margin={null}
      numberOfLines={null}
      spacingStyles="margin-top-XS margin-bottom-XS"
      text="lbl_orderDetails_shipping"
      textDecoration={null}
    />
    <Address
      address={
        Object {
          "addressLine1": "Wesley Street ",
          "addressLine2": "",
          "city": "Bronx",
          "country": "United States",
          "firstName": "User1",
          "lastName": "UserName1",
          "state": "NY",
          "zipCode": "10451",
        }
      }
      className="elem-mb-SM elem-mt-XXS"
      customStyle={Object {}}
      dataLocatorPrefix="address"
      fontSize="fs14"
      regularName={true}
      showCountry={false}
      showDefaultText={false}
      showName={true}
      showPhone={false}
    />
  </Styled(View)>
</Fragment>
`;
